<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[2]" />

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="307dp"
        android:layout_marginTop="132dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/btnRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bnt_registro" />

        <Button
            android:id="@+id/btnPista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pista" />

        <Button
            android:id="@+id/btnHangar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bnt_hangar" />
        <Button
            android:id="@+id/btnVolar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnVolar" />

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bnt_salir" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>